force-app/main/default/objects/Practice_Area__c/Practice_Area__c.object-meta.xml
<CustomObject>
    <label>Practice Area</label>
    <nameField>
        <label>Practice Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Practice Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>