force-app/main/default/objects/Practice_Area__c/fields/Category_Internal__c.field-meta.xml
<CustomField>
    <fullName>Category_Internal__c</fullName>
    <formula>TEXT(Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category (Internal)</label>
    <type>Text</type>
</CustomField>