force-app/main/default/objects/Practice_Area__c/fields/Category_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Category_Subcategory__c</fullName>
    <formula>IF(ISBLANK( TEXT(Subcategory__c) ), TEXT( Category__c ), TEXT( Category__c ) &amp; &apos; | &apos; &amp; TEXT( Subcategory__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category | Subcategory</label>
    <type>Text</type>
</CustomField>