force-app/main/default/objects/Practice_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Law__c</columns>
    <columns>Type_of_Civil_Law__c</columns>
    <columns>Category__c</columns>
    <columns>Subcategory__c</columns>
    <columns>Category_Subcategory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Family</value>
    </filters>
    <label>All</label>
</ListView>